--- a/classNotes/3-functions/3-functions.Rmd
+++ b/classNotes/3-functions/3-functions.Rmd
@@ -8,7 +8,20 @@ output:
     css: classNotes.css
 ---
 
-# Quiz 1 
+# Updates
+
+### 1. Download slack app 
+
+--
+### 2. Thanks for the animals Kaitlin, Jenny, Gabriel, and Emily!
+
+| | |
+|-|-|
+|<img src="images/Kaitlin_Fagan_Panda.gif" width="250"> | <img src="images/Jenny_Kim_Hampster.gif" width="250">|
+|<img src="images/Gabriel_Bahia_de_Sousa_Otter.gif" width="250"> | <img src="images/Emily_Aprigliano_Koala.gif" width="250">|
+
+---
+# Quiz 1
 
 ### [20 minutes](https://www.youtube.com/watch?v=kxGWsHYITAw)
 
@@ -32,15 +45,31 @@ FNAME <- function(ARG1, ARG2, ETC) {
 }
 ```
 
----
-# The `return()` statement
+--
+### Example:
 
-### `isPositive(n)`
-
-Write a function that returns `TRUE` if a number, `n`, is positive (`n > 0`) and `FALSE` otherwise.
+Write a function that returns the square root of `x`.
 
 --
+<br>
 
+```{r}
+mySqrt <- function(x) {
+    return(x^0.5)
+}
+```
+
+--
+```{r}
+mySqrt(64)
+```
+
+---
+# `return()` and `cat()` statements
+
+--
+.pull-left[
+Write a function that _returns_ `TRUE` if a number, `n`, is positive and `FALSE` otherwise.
 <br>
 
 ```{r}
@@ -48,14 +77,32 @@ isPositive <- function(n) {
     return(n > 0)
 }
 ```
+```{r}
+x <- isPositive(7)
+x
+```
+]
+--
+.pull-right[
+Write a function that _prints_ `TRUE` if a number, `n`, is positive and `FALSE` otherwise.
+<br>
 
+```{r}
+isPositive <- function(n) {
+    cat(n > 0)
+}
+```
+```{r}
+x <- isPositive(7)
+x
+```
+]
 ---
-# The `cat()` statement
+# Why use `cat()`?
 
 Short for "concatenating", the `cat()` statement prints whatever arguments it is given to the console:
 
 --
-
 ```{r}
 printX <- function(x) {
   cat("The value of x provided is", x)
@@ -63,17 +110,18 @@ printX <- function(x) {
 ```
 
 --
-
 ```{r}
 printX(7)
 printX(42)
 ```
 
 ---
-# Practice: What will these functions do?
+# Practice: What will these functions do? 
 
+[2 minutes](https://www.youtube.com/watch?v=48z7nQaehWI)
+
+--
 .pull-left[
-
 ```{r}
 f1 <- function(x) {
     return(x^3)
@@ -90,42 +138,22 @@ f4 <- function(x) {
     cat(x^4)
 }
 ```
-
-]
-
----
-# Practice: What will  these functions do?
-
-.pull-left[
-
-```{r}
-f1 <- function(x) {
-    return(x^3)
-}
-f2 <- function(x) {
-    cat(x^3)
-}
-f3 <- function(x) {
-    cat(x^3)
-    return(x^4)
-}
-f4 <- function(x) {
-    return(x^3)
-    cat(x^4)
-}
+```{r, eval=FALSE}
+f1(2)
+f2(2)
+f3(2)
+f4(2)
 ```
-
 ]
 
+--
 .pull-right[
-
 ```{r}
 f1(2)
 f2(2)
 f3(2)
 f4(2)
 ```
-
 ]
 
 ---
@@ -211,6 +239,7 @@ y
 
 **NEVER, NEVER, NEVER** call global variables inside functions.
 
+--
 Here's an example:
 
 ```{r include=FALSE}
@@ -281,7 +310,7 @@ The integer divide operator (`%/%`) "chops" a number and returns everything to t
 
 [20 minutes](https://www.youtube.com/watch?v=kxGWsHYITAw) - In groups of 4, write the following functions:
 
-.pull-left[ 
+.pull-left[
 
 1) `eggCartons(eggs)`: Write a program that reads in a non-negative number of eggs and prints the number of egg cartons required to hold that many eggs (given that each egg carton holds one dozen eggs, and you cannot buy fractional egg cartons). Be sure your program works for multiples of 12, including 0.
 
